# GBEmu

./: .gitignore  .gitmodules  CMakeLists.txt  CPU.cpp  CPU.h  Cartridge.cpp  Clock.cpp  Clock.h  GBEmu.sln  GBEmu.vcxproj  GBEmu.vcxproj.filters  Globals.h  Instruction.cpp  Instruction.h  RAM.cpp  RAM.h  README.md  Registers.h  main.cpp
.github/workflows/: cmake-multi-platform.yml
src/GBEmu/: CMakeLists.txt  CPU.cpp  CPU.h  CPU_OpcodeFuncs.cpp  Cartridge.cpp  Cartridge.h  Clock.cpp  Clock.h  GBEmu.vcxproj  GBEmu.vcxproj.filters  Gameboy.cpp  Globals.h  Instruction.cpp  Instruction.h  Log.cpp  Memory.cpp  Memory.h  RAM.h  Registers.h  main.cpp
src/GBEmu/core/: Application.cpp  Log.cpp  Screen.cpp  Window.cpp
src/GBEmu/gb/: CPU.cpp  CPU_OpcodeFuncs.cpp  Cartridge.cpp  Clock.cpp  Gameboy.cpp  Instruction.cpp  Memory.cpp  PPU.cpp  SerialDebug.cpp
src/GBEmu/include/: Application.h  CPU.h  Clock.h  Gameboy.h  Globals.h  Graphics.h  Instruction.h  Log.h  Memory.h  PPU.h  Registers.h  Screen.h  SerialDebug.h  Window.h
testROMs/: testCartridgeLoad.gb  testLD_DE.gb  testLD_DE.gb.bak
